# mimimo-tts

./: .gitignore  README.md  tts-debug-platform.html
tts-debug-app/src/: index.html
tts-debug-app/src-tauri/: Cargo.toml  tauri.conf.json
tts-debug-app/src-tauri/capabilities/: default.json
tts-debug-app/src-tauri/src/: main.rs
