[package]
name = "mimo-tts-debug"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "mimo_tts_debug_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
